alloc: Fixed modules that uses alloc, better MEMCHECK allocations.

--- a/Makefile.include
+++ b/Makefile.include
@@ -89,6 +89,7 @@ endif
 endif
 
 USE_MEMCHECK ?= no
+MEMCHECK_REPORT_THRESHOLD ?= 1048576
 
 USE_SSE    ?= no
 USE_OPENCL ?= auto
@@ -106,6 +107,7 @@ ifeq '$(USE_DOUBLE)' 'yes'
 endif
 ifeq '$(USE_MEMCHECK)' 'yes'
   CONFIG_FLAGS += -DUSE_MEMCHECK
+  CONFIG_FLAGS += -DMEMCHECK_REPORT_THRESHOLD=$(MEMCHECK_REPORT_THRESHOLD)
 endif
 ifeq '$(USE_SSE)' 'yes'
   CONFIG_FLAGS += -DUSE_SSE
