Added bor_poly2_t structure + in-polygon test.

--- a/testsuites/Makefile
+++ b/testsuites/Makefile
@@ -23,7 +23,7 @@ endif
 
 
 BENCH_HEAP = bench-heap-fibo bench-heap-pairheap
-OBJS = vec4.o vec3.o vec2.o vec.o quat.o pc3.o pc.o \
+OBJS = vec4.o vec3.o vec2.o vec.o quat.o pc3.o pc.o poly2.o \
        mat3.o mat4.o gug.o mesh3.o nearest.o \
        fibo.o pairheap.o dij.o chull3.o \
        tasks.o task-pool.o vptree.o nn.o cfg.o opts.o sort.o \
