--- a/Makefile.include
+++ b/Makefile.include
@@ -173,6 +173,54 @@ PYTHON_CFLAGS  ?= $(shell $(PYTHON_CONFIG) --includes)
 PYTHON_LDFLAGS ?= $(shell $(PYTHON_CONFIG) --libs)
 
 
+CPLEX_CFLAGS ?=
+CPLEX_LDFLAGS ?=
+ifneq '$(CPLEX_CFLAGS)$(CPLEX_LDFLAGS)' ''
+  USE_CPLEX := yes
+endif
+
+GUROBI_CFLAGS ?=
+GUROBI_LDFLAGS ?=
+ifneq '$(GUROBI_CFLAGS)$(GUROBI_LDFLAGS)' ''
+  USE_GUROBI := yes
+endif
+
+LPSOLVE_CFLAGS ?=
+LPSOLVE_LDFLAGS ?=
+ifneq '$(LPSOLVE_CFLAGS)$(LPSOLVE_LDFLAGS)' ''
+  USE_LPSOLVE := yes
+else
+  ifeq '$(shell if test -f /usr/lib/liblpsolve55.so; then echo "yes"; fi;)' 'yes'
+    LPSOLVE_LDFLAGS = -llpsolve55
+    USE_LPSOLVE := yes
+  endif
+endif
+
+GLPK_CFLAGS ?=
+GLPK_LDFLAGS ?=
+ifneq '$(GLPK_CFLAGS)$(GLPK_LDFLAGS)' ''
+  USE_GLPK := yes
+else
+  ifeq '$(shell if test -f /usr/lib/libglpk.so; then echo "yes"; fi;)' 'yes'
+    GLPK_LDFLAGS = -lglpk
+    USE_GLPK := yes
+  endif
+endif
+
+ifeq '$(USE_CPLEX)' 'yes'
+  CONFIG_FLAGS += -DUSE_CPLEX
+endif
+ifeq '$(USE_GUROBI)' 'yes'
+  CONFIG_FLAGS += -DUSE_GUROBI
+endif
+ifeq '$(USE_LPSOLVE)' 'yes'
+  CONFIG_FLAGS += -DUSE_LPSOLVE
+endif
+ifeq '$(USE_GLPK)' 'yes'
+  CONFIG_FLAGS += -DUSE_GLPK
+endif
+
+
 PREFIX     ?= /usr/local
 INCLUDEDIR ?= include
 LIBDIR     ?= lib
