[ilc]set modules instead of set_arr_*

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,5 @@ src/cfg-lexer-gen.h
 src/timsort.c
 src/timsort-impl.h
 Makefile.local
-boruvka/set_arr_int.h
-src/set_arr_int.c
-boruvka/set_arr_long.h
-src/set_arr_long.c
+boruvka/[ilc]set.h
+src/[ilc]set.c
