--- a/testsuites/cu/Makefile
+++ b/testsuites/cu/Makefile
@@ -1,4 +1,12 @@
+
 CC ?= gcc
+PYTHON ?= python
+
+PREFIX     ?= /usr/local
+INCLUDEDIR ?= include
+LIBDIR     ?= lib
+BINDIR     ?= bin
+
 CFLAGS = -g -Wall -pedantic
 
 ENABLE_TIMER ?= no
@@ -9,41 +17,34 @@ endif
 
 TARGETS = libcu.a
 
-TEST_OBJS = test.o test2.o
-
 all: $(TARGETS)
 
 libcu.a: cu.o
 	ar cr $@ $^
 	ranlib $@
+
 cu.o: cu.c cu.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-test: $(TEST_OBJS) libcu.a
-	$(CC) $(CFLAGS) -o $@ $(TEST_OBJS) -L./ -lcu
-test-segfault: test-segfault.c libcu.a
-	$(CC) $(CFLAGS) -o $@ $^ -L./ -lcu
+install: libcu.a
+	mkdir -p $(PREFIX)/$(INCLUDEDIR)
+	mkdir -p $(PREFIX)/$(LIBDIR)
+	mkdir -p $(PREFIX)/$(BINDIR)
+	cp cu.h $(PREFIX)/$(INCLUDEDIR)/
+	cp libcu.a $(PREFIX)/$(LIBDIR)/
+	cp cu-check-regressions $(PREFIX)/$(BINDIR)/
 
-%.o: %.c
-	$(CC) $(CFLAGS) -c -o $@ $<
-
-check: test test-segfault
-	mkdir -p regressions
-	touch regressions/testSuiteName{,2}.{out,err}
-	touch regressions/testSuiteTest2.{out,err}
-	-./test
-	-cd regressions && ../check-regressions
-	@echo ""
-	@echo "======= SEGFAULT: ========="
-	@echo ""
-	-./test-segfault
+deb:
+	$(PYTHON) debian/make-changelog.py <CHANGELOG >debian/changelog
+	cp BSD-LICENSE debian/copyright
+	debuild -us -uc
 
 clean:
 	rm -f *.o
-	rm -f test
-	rm -f test-segfault
 	rm -f $(TARGETS)
-	rm -f tmp.*
-	rm -rf regressions
+	$(MAKE) -C testsuites clean
+
+check:
+	$(MAKE) -C testsuites
 
 .PHONY: all clean check
