Fixed clean rule in test/Makefile

--- a/test/Makefile
+++ b/test/Makefile
@@ -184,6 +184,7 @@ clean:
 	rm -f $(TARGETS)
 	rm -f tmp.*
 	rm -f reg/tmp.*
+	rm -f reg/TS*.rand-*
 	rm -f $(BENCH_HEAP)
 	rm -f msg-schema-{gen,regen,print,cmp}
 
