--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,13 @@ stages:
   stage: build
   image: debian:stretch
   only:
-    - master
+    refs:
+      - master
     variables:
       - $CI_COMMIT_MESSAGE =~ /@ci/
   except:
     variables:
-      - $CI_COMMIT_MESSAGE =~ /skip-ci/
+      - $CI_COMMIT_MESSAGE =~ /@skip-ci/
   before_script:
     - env
     - apt-get update
@@ -30,12 +31,13 @@ stages:
   stage: test
   image: debian:stretch
   only:
-    - master
+    refs:
+      - master
     variables:
       - $CI_COMMIT_MESSAGE =~ /@ci/
   except:
     variables:
-      - $CI_COMMIT_MESSAGE =~ /skip-ci/
+      - $CI_COMMIT_MESSAGE =~ /@skip-ci/
   before_script:
     - env
     - apt-get update
