Updated cu and modified make check-ci so it fails when any test fail

--- a/test/Makefile
+++ b/test/Makefile
@@ -152,13 +152,7 @@ check: all
 	@echo ""
 
 check-ci: all
-	@echo ""
-	@echo "----------------------------------------";
-	./test $(CHECK_TS)
-	@echo "----------------------------------------";
-	@echo "Checking regressions:";
-	$(PYTHON2) $(CHECK_REG) --no-progress reg
-	@echo ""
+	./check-ci.sh
 
 check-msg-schema: msg-schema-gen msg-schema-print
 	@echo "Checking msg-schema..."
