--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,25 +93,21 @@ check-debian-gcc-double:
   variables:
     USE_DOUBLE: "yes"
 
-check-debian-gcc-lp-hdf5-gsl:
+check-debian-gcc-hdf5-gsl:
   extends: .check-debian
   variables:
-    DEBIAN_PKGS: "liblpsolve55-dev libhdf5-dev libgsl-dev"
-    USE_LPSOLVE: "yes"
-    LPSOLVE_LDFLAGS: "-llpsolve55"
+    DEBIAN_PKGS: "libhdf5-dev libgsl-dev"
     USE_HDF5: "yes"
     HDF5_CFLAGS: "-I/usr/include/hdf5/serial"
     HDF5_LDFLAGS: "-L/usr/lib/x86_64-linux-gnu/hdf5/serial -lhdf5"
     USE_GSL: "yes"
     GSL_LDFLAGS: "-lgsl -lgslcblas -lm"
 
-check-debian-gcc-double-lp-hdf5-gsl:
+check-debian-gcc-double-hdf5-gsl:
   extends: .check-debian
   variables:
     USE_DOUBLE: "yes"
-    DEBIAN_PKGS: "liblpsolve55-dev libhdf5-dev libgsl-dev"
-    USE_LPSOLVE: "yes"
-    LPSOLVE_LDFLAGS: "-llpsolve55"
+    DEBIAN_PKGS: "libhdf5-dev libgsl-dev"
     USE_HDF5: "yes"
     HDF5_CFLAGS: "-I/usr/include/hdf5/serial"
     HDF5_LDFLAGS: "-L/usr/lib/x86_64-linux-gnu/hdf5/serial -lhdf5"
